crates/justrdp-derive/tests/ui/unknown_attr.stderr
error: unknown pdu attribute
 --> tests/ui/unknown_attr.rs:5:11
  |
5 |     #[pdu(foo)]
  |           ^^^
